--- a/sourse/pug/pages/02-payment-page.pug
+++ b/sourse/pug/pages/02-payment-page.pug
@@ -8,7 +8,7 @@ include ../blocks/s-payment-method/_s-payment-method.pug
 block variables
 	- let  mainPage= null
 block title
-	- let  title= 'Способ оплаты'
+	- let  title= 'Оплата через Яндекс.Деньги'
 	title= title
 block pagecontent
 	+header()
