--- a/sourse/pug/blocks/s-payment-method/_s-payment-method.scss
+++ b/sourse/pug/blocks/s-payment-method/_s-payment-method.scss
@@ -27,6 +27,7 @@
 			display: inline-block;
 			color: #000;
 			&:hover{
+				transform: translateY(rem(-15));
 				color: #6488c2;
 				text-decoration: none;
 			}
@@ -100,7 +101,7 @@
 				box-sizing: border-box;
 				box-shadow: 0 18px 32px rgba(0, 0, 0, 0.19);
 				background: #fff;
-				transition: all .4s ease-in-out;
+				transition: all .2s ease-in-out;
 				
 				opacity: 0;
 				visibility: hidden;
