--- a/sourse/pug/pages/02-payment-page.pug
+++ b/sourse/pug/pages/02-payment-page.pug
@@ -3,7 +3,7 @@ extends layout/main.pug
 
 include ../blocks/s-content/_s-content.pug
 include ../blocks/s-contact/_s-contact.pug
-include ../blocks/s-payment-method/_s-payment-method.pug
+include ../blocks/s-payment-order/_s-payment-order.pug
 
 block variables
 	- let  mainPage= null
@@ -14,5 +14,5 @@ block pagecontent
 	+header()
 		+top-line()
 	+header-block()
-	+s-payment-method()
+	+s-payment-order()
 	+footer()
