--- a/sourse/pug/blocks/s-payment-order/_s-payment-order.scss
+++ b/sourse/pug/blocks/s-payment-order/_s-payment-order.scss
@@ -51,7 +51,8 @@
 			content: '';
 			width: rem(8);
 			height: rem(8);
-			top: 50%; right: rem(5);
+			top: 48%; 
+			right: rem(5);
 			border-bottom: 2px solid $primary;
 			border-right: 2px solid $primary;
 			transform: rotate(45deg) translateY(-50%);
