--- a/sourse/pug/blocks/s-payment-order/_s-payment-order.pug
+++ b/sourse/pug/blocks/s-payment-order/_s-payment-order.pug
@@ -9,7 +9,7 @@ mixin s-payment-order()
 					+e.payment-wrap
 						+e.payment-trigger
 							img.res-i(src='img/@2x/payment-i.png' alt='')
-							| Яндекс.Деньги
+							div Яндекс.Деньги
 						+e.payment-toggle
 							+e.order-row.row
 								mixin order-i()
